--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "SDL2-CS"]
 	path = SDL2-CS
 	url = https://github.com/flibitijibibo/SDL2-CS.git
+[submodule "Raft"]
+	path = Raft
+	url = https://github.com/SignalWalker/Raft.git
