--- a/VulkanCubes/VulkanCubes.csproj
+++ b/VulkanCubes/VulkanCubes.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <ProjectReference Include="..\Raft\Raft.csproj" />
+    <ProjectReference Include="..\Raft\Raft\Raft.csproj" />
     <ProjectReference Include="..\Raft\VulkanCore\Src\VulkanCore.csproj" />
     <ProjectReference Include="..\Raft\SDL2-CS\SDL2-CS.Core.csproj" />
   </ItemGroup>
